--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "babel tech-audit.js --out-file docs/tech-audit.bookmarklet.js",
     "lint": "eslint tech-audit.js",
-    "lint-and-fixup": "eslint --fix tech-audit.js"
+    "lint-and-fixup": "eslint --fix tech-audit.js",
+    "serve": "http-server docs/"
   },
   "repository": "https://github.com/ticky/tech-audit-bookmarklet.git",
   "author": "Jessica Stokes <hello@jessicastokes.net>",
@@ -13,7 +14,8 @@
   "devDependencies": {
     "babel-cli": "^6.23.0",
     "babel-preset-babili": "^0.0.11",
-    "babel-preset-env": "^1.1.11"
+    "babel-preset-env": "^1.1.11",
+    "http-server": "^0.9.0"
   },
   "babel": {
     "presets": [
