--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-cli": "^6.23.0",
     "babel-preset-babili": "^0.0.11",
     "babel-preset-env": "^1.1.11",
+    "eslint": "^3.19.0",
     "http-server": "^0.9.0"
   },
   "babel": {
