--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,5 +1,11 @@
+parser: babel-eslint
+
+plugins:
+  - flowtype
+
 extends:
   - eslint:recommended
+  - plugin:flowtype/recommended
 
 env:
   es6: true
