--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@babel/cli": "7.4.4",
     "@babel/core": "7.4.4",
     "@babel/preset-env": "7.4.4",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-preset-minify": "0.5.0",
     "eslint": "5.16.0",
+    "eslint-plugin-flowtype": "^3.7.0",
+    "flow-bin": "^0.98.0",
     "http-server": "0.11.1"
   },
   "babel": {
@@ -34,7 +38,9 @@
         {
           "modules": false
         }
-      ]
-    ]
+      ],
+      "@babel/preset-flow"
+    ],
+    "comments": false
   }
 }
